--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ ffmpeg/.vs
 ffmpeg/QLabelPlayVideo2/x64
 ffmpeg/QOpenGLPlayVideo/x64
 ffmpeg/GLPlayYUV/x64
+ffmpeg/x64/Debug/*.ilk
+ffmpeg/x64/Debug/*.pdb
