--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ ffmpeg/GLPlayYUV/x64
 ffmpeg/PlaySocketVideo/x64
 ffmpeg/Remuxing/x64
 ffmpeg/SaveVideo/x64
+ffmpeg/RTSP_Server/x64
 ffmpeg/x64/Debug/*.ilk
 ffmpeg/x64/Debug/*.pdb
