edit rtsp client

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ ffmpeg/PlaySocketVideo/x64
 ffmpeg/Remuxing/x64
 ffmpeg/SaveVideo/x64
 ffmpeg/RTSP_Server/x64
+ffmpeg/RTSP_Client/x64
 ffmpeg/x64/Debug/*.ilk
 ffmpeg/x64/Debug/*.pdb
