--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ ffmpeg2/x64/Debug/*.ilk
 ffmpeg2/x64/Debug/*.pdb
 
 ffmpeg_audio/Bluetooth/build-Bluetooth-5_15_MSVC-Debug/
+ffmpeg_audio/Bluetooth/build-Bluetooth-Desktop_Qt_5_15_0_MSVC2019_64bit-Debug/
